# lightland

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
cmake/: Findglad.cmake  Findglfw.cmake  Findglm.cmake
lib/: CMakeLists.txt  log.c  log.h
lib/graphics/: geometry.hpp  render_ifs.hpp  shader.hpp  transform.hpp  vertex.hpp  window.hpp  window_base.hpp  wkwindow.hpp
lib/graphics/opengl/: primitive.cpp  primitive.hpp  shader.cpp  transform.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window.cpp  wkwindow.cpp
tests/: CMakeLists.txt  main.cc
